# mathlib

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
bench/: laplace_ast_bench.py  laplace_phase_c.py  laplace_phase_d.py  laplace_phase_e.py  laplace_tests.py  linear_algebra_session1_tests.py  linear_algebra_session2_tests.py  linear_algebra_tests.py  numerical_analysis_advanced_tests.py  numerical_analysis_ode_tests.py  numerical_analysis_tests.py  perf_compare.py
docs/: algorithm_reference.md  cython_best_practices.md  final_audit.md  generalization_guide.md  implementation_spec.md  laplace_guide.md  linear_algebra_guide.md  numerical_analysis_guide.md  performance_benchmark.md  phase_3_completion.md  verification_report.md
src/math_library/: __init__.py
src/math_library/_core/: __init__.py  _constants.pxd  _constants.pyx  _helpers.pxd  aggregate.pxd  aggregate.pyx  argument_reduction.pxd  argument_reduction.pyx  discrete.pxd  discrete.pyx  exponential.pxd  exponential.pyx  hyperbolic.pxd  hyperbolic.pyx  ieee_ops.pxd  ieee_ops.pyx  inverse_hyperbolic.pxd  (+16 more)
tests/: test_bessel_function.py  test_beta_function.py  test_comprehensive_types.py  test_constant.py  test_differentiation.py  test_euler_pi_function.py  test_exponential_function.py  test_gamma_function.py  test_gcd.py  test_heaviside_step_function.py  test_hyperbolic_function.py  test_inverse_trigonometric_function.py  test_lambert_w_function.py  test_lcm.py  test_legendre_function.py  test_logarithmic_function.py  test_trigonomectric_function.py  test_zeta_function.py
(+103 files in other folders)
