[build-system]
requires = ["setuptools>=61", "Cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math_library"
version = "0.2.0"
description = "자체 구현 Cython 기반 수학 라이브러리 (math 모듈 대체)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "lsh330", email = "sanghoon330@naver.com"},
]

[tool.setuptools]
packages = ["math_library"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
